--- a/templates/documents.html
+++ b/templates/documents.html
@@ -84,23 +84,61 @@ const perPage = 10;
 let totalPages = 1;
 
 function getFileIcon(filename) {
+    if (!filename) return 'file';
+    
     const ext = filename.split('.').pop().toLowerCase();
     switch (ext) {
+        // Documents
         case 'pdf':
             return 'file-text';
         case 'doc':
         case 'docx':
-            return 'file-text';
+            return 'file-word';
         case 'xls':
         case 'xlsx':
-            return 'file';
+            return 'file-spreadsheet';
+        case 'ppt':
+        case 'pptx':
+            return 'file-presentation';
+        case 'txt':
+            return 'file-text';
+        
+        // Images
         case 'jpg':
         case 'jpeg':
         case 'png':
+        case 'gif':
+        case 'bmp':
+        case 'svg':
             return 'image';
+        
+        // Archives
         case 'zip':
         case 'rar':
+        case '7z':
+        case 'tar':
+        case 'gz':
             return 'archive';
+            
+        // Code files
+        case 'js':
+        case 'py':
+        case 'java':
+        case 'cpp':
+        case 'html':
+        case 'css':
+            return 'code';
+            
+        // Media
+        case 'mp3':
+        case 'wav':
+        case 'ogg':
+            return 'music';
+        case 'mp4':
+        case 'avi':
+        case 'mov':
+            return 'video';
+            
         default:
             return 'file';
     }
